Preventing about page elements to overlap the other pages.

--- a/frontend/src/pages/About/about.css
+++ b/frontend/src/pages/About/about.css
@@ -13,6 +13,7 @@
 }
 
 .about {
+    overflow-y: hidden;
     display: flex;
     flex-direction: row;
     min-height: 100vh;
